--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+* { 
+    margin: 0; 
+    padding: 0; 
+    box-sizing: border-box; 
+} 
+
 .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -109,10 +115,12 @@
 
 .sidebar h2 {
     color: white;
+    margin-left: 16px;
 }
 
 .sidebar img {
     filter: invert(100%) sepia(97%) saturate(0%) hue-rotate(55deg) brightness(104%) contrast(103%);
+    margin-left: 16px;
 }
 
 .dashboard {
@@ -123,18 +131,32 @@
 .firstSectionIcons {
     display: flex;
     align-items: center;
+    margin-bottom: 16px;
 }
 
 .SecondSectionIcons {
     display: flex;
     align-items: center;
+    margin-bottom: 16px;
+}
+
+.dashboardIcon {
+    width: 50px;
+}
+
+.firstSectionIcons img {
+    width: 30px;
+}
+
+.SecondSectionIcons img {
+    width: 30px;
 }
 
 .mainContent {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 4fr 1.7fr;
     grid-template-rows: 50px 1fr 50px 1fr;
     background-color: #e5e7eb;
 }
@@ -144,7 +166,6 @@
     grid-row: 2 / 5;
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
-    grid-template-rows: 200px 200px;
     gap: 20px;
     margin-left: 20px;
 }
@@ -157,11 +178,15 @@
     border-radius: 9px;
 }
 
+.yourProjectSectionCards h3 {
+    margin-top: 30px;
+}
 
 .yourProjectHeading {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     margin-left: 20px;
+    margin-top: 20px;
 }
 
 .yourProjectSection .yourProjectSectionCards h3, p {
@@ -174,6 +199,7 @@
     justify-content: end;
     gap: 20px;
     margin-right: 20px;
+    margin-top: 60px;
 }
 
 .annoucementSection {
@@ -182,17 +208,34 @@
     background-color: white;
     margin-left: 20px;
     margin-right: 20px;
-    height: 60vh;
+    border-radius: 9px;
+    margin-bottom: 30px;
 }
 
 .announcementHeading {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
     margin-left: 20px;
+    margin-top: 20px;
 }
 
 .annoucementSectionContents {
     height: 17vh;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.annoucementSection .annoucementSectionContents p {
+ margin-top: 0px;
+}
+
+.annoucementSection .annoucementSectionContents h3 {
+    margin-bottom: 0px;
+    margin-left: 20px;
+}
+
+.topAnnoucement {
+    margin-top: 27px;
 }
 
 .trendingSection {
@@ -201,14 +244,18 @@
     background-color: white;
     margin-left: 20px;
     margin-right: 20px;
-    height: 60vh;
     margin-bottom: 30px;
+    border-radius: 9px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .trendingHeader {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
     margin-left: 20px;
+    margin-top: 20px;
 }
 
 .trendingSectionContents {
@@ -218,6 +265,7 @@
 
 .trendingUSerInfo{
     align-self: center;
+    margin-left: 14px;
 }
 
 .trendingUSerInfo p {
@@ -226,7 +274,7 @@
 }
 
 .lastRowSection {
-    margin-bottom: 30px;
+    margin-bottom: 27px;
 }
 
 img {
